force-app/main/default/objects/SPEN_BroadcastSMS__c/SPEN_BroadcastSMS__c.object-meta.xml
<CustomObject>
    <label>Broadcast SMS</label>
    <nameField>
        <label>Broadcast SMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Broadcast SMSs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>