force-app/main/default/objects/SPEN_BroadcastSMS__c/fields/SPEN_BroadcastMessage__c.field-meta.xml
<CustomField>
    <fullName>SPEN_BroadcastMessage__c</fullName>
    <label>Broadcast Message</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>