force-app/main/default/objects/SPEN_BroadcastSMS__c/fields/SPEN_Case__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Broadcast SMSs</relationshipLabel>
    <relationshipName>Broadcast_SMSs</relationshipName>
    <type>Lookup</type>
</CustomField>