force-app/main/default/objects/SPEN_BroadcastSMS__c/fields/SPEN_Contact__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Broadcast SMSs</relationshipLabel>
    <relationshipName>Broadcast_SMSs</relationshipName>
    <type>Lookup</type>
</CustomField>