force-app/main/default/objects/SPEN_BroadcastSMS__c/fields/SPEN_TelephoneNumber__c.field-meta.xml
<CustomField>
    <fullName>SPEN_TelephoneNumber__c</fullName>
    <formula>SPEN_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telephone Number</label>
    <type>Text</type>
</CustomField>